--- a/jmercury.server/src/main/java/org/maxsys/jmercury/server/EditMeterDialog.form
+++ b/jmercury.server/src/main/java/org/maxsys/jmercury/server/EditMeterDialog.form
@@ -193,6 +193,9 @@
       </Events>
     </Component>
     <Component class="javax.swing.JTextField" name="jTextField2">
+      <Properties>
+        <Property name="horizontalAlignment" type="int" value="4"/>
+      </Properties>
     </Component>
     <Component class="javax.swing.JComboBox" name="jComboBox2">
       <Properties>
