--- a/jmercury.server/src/main/java/org/maxsys/jmercury/server/NewMeterDialog.form
+++ b/jmercury.server/src/main/java/org/maxsys/jmercury/server/NewMeterDialog.form
@@ -168,6 +168,9 @@
       </Properties>
     </Component>
     <Component class="javax.swing.JTextField" name="jTextField2">
+      <Properties>
+        <Property name="horizontalAlignment" type="int" value="4"/>
+      </Properties>
     </Component>
     <Component class="javax.swing.JButton" name="jButton2">
       <Properties>
