--- a/jmercury.client/src/main/java/org/maxsys/jmercury/client/MainFrame.form
+++ b/jmercury.client/src/main/java/org/maxsys/jmercury/client/MainFrame.form
@@ -94,7 +94,7 @@
         </Component>
         <Component class="javax.swing.JButton" name="jButton2">
           <Properties>
-            <Property name="text" type="java.lang.String" value="jButton2"/>
+            <Property name="text" type="java.lang.String" value="&#x41e;&#x442;&#x447;&#x435;&#x442;"/>
             <Property name="focusable" type="boolean" value="false"/>
             <Property name="horizontalTextPosition" type="int" value="0"/>
             <Property name="verticalTextPosition" type="int" value="3"/>
