--- a/jmercury.client/src/main/resources/org/maxsys/jmercury/client/resources/potreb.jrxml
+++ b/jmercury.client/src/main/resources/org/maxsys/jmercury/client/resources/potreb.jrxml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!-- Created with Jaspersoft Studio version 6.1.0.final using JasperReports Library version 6.1.0  -->
-<!-- 2015-07-28T11:10:47 -->
+<!-- 2015-08-13T13:32:58 -->
 <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="potreb" pageWidth="842" pageHeight="595" orientation="Landscape" columnWidth="802" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20" uuid="3dda483a-a123-4683-be04-cf306b2fe79f">
 	<property name="com.jaspersoft.studio.data.defaultdataadapter" value="One Empty Record"/>
 	<property name="com.jaspersoft.studio.unit." value="pixel"/>
@@ -111,7 +111,7 @@
 				<textElement textAlignment="Center" verticalAlignment="Middle">
 					<font fontName="DejaVu Serif" size="12"/>
 				</textElement>
-				<textFieldExpression><![CDATA["Об электропотреблении за " + $P{Title_1_date} + " г."]]></textFieldExpression>
+				<textFieldExpression><![CDATA["об электропотреблении за " + $P{Title_1_date} + " г."]]></textFieldExpression>
 			</textField>
 			<textField>
 				<reportElement key="" x="0" y="40" width="802" height="20" uuid="05055105-2f28-40b4-be0f-29dd4f7b5848"/>
