--- a/jmercury.server/src/main/java/org/maxsys/jmercury/server/MainFrame.form
+++ b/jmercury.server/src/main/java/org/maxsys/jmercury/server/MainFrame.form
@@ -20,6 +20,9 @@
       </SubComponents>
     </Menu>
   </NonVisualComponents>
+  <Properties>
+    <Property name="defaultCloseOperation" type="int" value="0"/>
+  </Properties>
   <SyntheticProperties>
     <SyntheticProperty name="formSizePolicy" type="int" value="1"/>
     <SyntheticProperty name="generateCenter" type="boolean" value="false"/>
